--- a/fluxer_app/src/features/user/components/profile/profile_card/ProfileCardMutuals.module.css
+++ b/fluxer_app/src/features/user/components/profile/profile_card/ProfileCardMutuals.module.css
@@ -4,7 +4,6 @@
 	display: flex;
 	align-items: center;
 	gap: 0.25rem;
-	margin-top: 0.25rem;
 	min-width: 0;
 }
 
